<resources>
    <string name="app_name">ApartPlanner</string>
    <string name="addressHintText">Адрес</string>
    <string name="btnChooseFile">Выберите файл</string>
    <string name="studioNumber">Студия №</string>
    <string name="studioSize">Площадь, м^2</string>
    <string name="studioPrice">Цена,тыс.руб</string>
    <string name="saveFile">Сохранить</string>
    <string name="logOut">Выйти</string>
    <string name="logIn">Войти</string>
    <string name="enterKeyHintText">Введите ключ доступа</string>
    <string name="adminMode">Режим администратора</string>
    <string name="makeNew">Создать новый адрес</string>
    <string name="inputCountOf">Введите кол-во студий</string>
    <string name="address">Address</string>
    <string name="signUp">Зарегистрироваться</string>
    <string name="password">Пароль</string>
    <string name="e_mail">Электронная почта</string>
    <string name="helpTxt">Пароль должен содержать мин. 6 символов</string>
    <string name="enter_count_of_studios">Введите кол-во студий :</string>
</resources>