<android.widget.TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/editName"
            android:background="@drawable/borders"
            android:padding="15dp"
            android:text="@string/studioNumber"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/editSize"
            android:background="@drawable/borders"
            android:padding="15dp"
            android:text="@string/studioSize"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/editState"
            android:background="@drawable/borders"
            android:padding="15dp"
            android:text="@string/studioPrice"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </TableRow>
</android.widget.TableLayout>