<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminActivity">

    <TextView
        android:id="@+id/addressUserText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:hint="@string/addressHintText"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageUser"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/address"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressUserText"
        app:srcCompat="@drawable/ic_launcher_background" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline2">

        <TextView
            android:background="@drawable/borders"
            android:paddingHorizontal="10dp"
            android:paddingVertical="15dp"
            android:text="@string/studioNumber"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:background="@drawable/borders"
            android:paddingHorizontal="10dp"
            android:paddingVertical="15dp"
            android:text="@string/studioSize"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:background="@drawable/borders"
            android:paddingHorizontal="10dp"
            android:paddingVertical="15dp"
            android:text="@string/studioPrice"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </TableRow>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerStudio"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tableRow"
        app:layout_constraintStart_toStartOf="@+id/tableRow"
        app:layout_constraintTop_toBottomOf="@+id/tableRow"
        tools:listitem="@layout/item_studio" />


</androidx.constraintlayout.widget.ConstraintLayout>