<?xml version="1.0" encoding="utf-8"?>
<android.widget.TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <TableRow
        android:id="@+id/tableRowUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editNameStudio"
            android:maxLength="9"
            android:background="@drawable/borders"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/studioNumber"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingHorizontal="9dp"
            android:paddingVertical="15dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editSizeStudio"
            android:maxLength="8"
            android:background="@drawable/borders"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/studioSize"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:paddingHorizontal="9dp"
            android:paddingVertical="15dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editStateStudio"
            android:maxLength="8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/borders"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/studioPrice"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:paddingHorizontal="9dp"
            android:paddingVertical="15dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </TableRow>
</android.widget.TableLayout>